==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Fixes
=====

 - Fixed a regression that caused queries with a ``GROUP BY`` on array-columns,
   which are wrapped in a scalar function, to fail.

 - Fixed an issue that caused an exception if a column gets added to a table
   that has been created with CrateDB version <= 1.1.